# rust-brisas-app

./: .cursorrules  .dev-env-config  .editorconfig  .gitattributes  .gitignore  .mingw64-config  .prettierignore  ARQUITECTURA_BACKEND.md  FIX_UUID_LOCALSTORAGE.js  LICENSE  Start-Mingw64RustEnv.ps1  check_output.txt  check_output_v3.txt  check_output_v4.txt  dev-env.ps1  eslint.config.js  eslint_errors_v10.txt  eslint_errors_v11.txt  eslint_errors_v12.txt  eslint_errors_v5.txt  eslint_errors_v6.txt  eslint_errors_v8.txt  eslint_errors_v9.txt  eslint_report_v14.txt  fix-env.ps1  keys.txt  keys_utf8.txt  log.txt  package-lock.json  package.json  schema.surql  setup_git.ps1  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
src-tauri/: .gitignore  Cargo.toml  INSTRUCCIONES_FIX_SQL.md  KEYRING-FIX.md  KEYRING-WINDOWS-FIX.md  MANUAL_FIX_insert_system_user.sql  brisas_dev.db  build.rs  build_errors.txt  cargo_check_errors.txt  cargo_check_final.txt  cargo_check_inference.txt  cargo_check_repair.txt  cargo_errors.txt  check_error.txt  check_errors.txt  check_final_retry.txt  check_final_retry_2.txt  check_log.txt  check_log_final.txt  check_output.txt  check_output_2.txt  check_output_retry.txt  check_results.txt  clippy_errors.txt  clippy_full.txt  clippy_output.txt  clippy_output_v2.txt  clippy_phase2.txt  clippy_phase2_v2.txt  clippy_phase3.txt  clippy_phase3_v2.txt  clippy_remaining.txt  diagnose-keyring.sh  errors.txt  errors_strict.txt  errors_v5.txt  final_check.txt  final_check_3.txt  final_check_v4.txt  (+11 more)
src-tauri/.cargo/: config.toml
src-tauri/.sqlx/: query-02ca37beeec78e9ac41b24a9d7ccbc73174ae64f1a4f66cebbcceebd903f2ed2.json  query-0487e40e5c3b88438940ed3a2e9f42c1552c07739d2d01a44db04bcb54861680.json  query-05287fa959d09ae628173cc20e273ca119e4b2e7bb7649457eb30a7818861fc9.json  query-05954dc31f3a97b148915917d4eda54ebc97e4ceb12a781573596925378f4d6e.json  query-0791a2f24ef06eb61d8d9fc10f915485c0db27edb9ea828ad70df733d04c1228.json  query-0ad9ed098eb4bab57ae6cd9df93d2113e8350b43558c04a98f0e394804767fde.json  query-0cab1feba091db9e8e59703cdd87a62950cdb8b5b6e93b5f3d60f63f6491cf81.json  query-0d1ec774922fedcb54be19b3e0e0c6d67edcca4a7e50f00681c8c9ff6c1f2fcf.json  query-0f75b001ab46097f70710c179cca4c070c82b97d4270d34abbd7d43ebace8406.json  query-0f7f8649a2d3b13a49d81438c7e03cc35baf8b75b612d810fcde7adfcd7bf718.json  query-1040a82821d99354a53ec98e77e11e55445041ccba33b105f3acfb28b1b1ef5c.json  query-1190710d38904304970729807168c1d4644bca4c3e086b3d512bdea0f324e6fc.json  query-11b13f78c609581922a1a9e7c9cdee9578deba062f16a502d077f80d80571ca9.json  query-11b498e565b5335bb8c14c7c3f82400add55f81664d83fa1f426bb8042ee9014.json  query-11cc2cbba3c271c7a727650799866b15ba964868337f487436160b31d07c2e31.json  query-11ec306fb0c7091446c55db1e55836a294c71d77c3a1e48820ffc26ad31d2e95.json  query-1360f4248d095f89eaa6cbd002f23050f88c4564fc5ce433d47d9bb833c731fc.json  query-16467f8e61d50d3061cc12b9785e34be792e6b33ad01dae8eb0b073e87f9b940.json  query-18ac64b5a93d97a1c852973520b6058f2b13f83905d4ad8e93b5945ccfa4d939.json  query-18b49fd85ae273f27c7186006a7236b279f1e5df2cfd3dee6777309b7b6dea4e.json  query-18e0a2be64cf20e6727a1af374b60d02f51c85e8d0bb0159bb649f676bdf0dc0.json  query-1968f723c42f69374d2c9be9558815175bebf3fb8d78a051aa551393e2f07b07.json  query-19b5a67f8cccecca91d3beb0c74aefa2214fd54b960d1c8bd96eebb530bdac54.json  query-1b94c57ab1375ec3100e40571af14782f8d3228bc2114db3b241c23261fd9740.json  query-1d07cdcdd41d2b14b735dd67af4698cf6d0771859dac7a305deff64757137095.json  query-1e62bbb114e1244669a14add24b410e67db8986dd8a1e111fa887b7eaab78b11.json  query-1e7ee7c41a4e7b800f7867543b05c19f83cf7a80abfb76e886eaad5a9e077d89.json  query-200f007a5d59a411793e72cfab6d04484cb8dabd2012b1fe838ed1dac110277c.json  query-228d237ca62a0aaa8fe4a5fce19b77820b7ff151fe9b95d72ab019b5e59a273e.json  query-23b9954a6fa8e0e61731200f6dbf3e8078387b7c9300b01fadf6b3923b22e29a.json  query-23c75151f724f2e80f653820ebae1b7e2c7ae3e30c296c6a55b70e27dee578d1.json  query-24f236bba977b415a0d312534a051238516abd2308ade1aa82c4bb8fe53b22b4.json  query-266d15f81f6d32e8c0b5efe0e3fc78f49bbcf48837f8e340569f6a89e6a1246d.json  query-28b2ca90c25290b1940564b780b9bfab380e83729800ac0e45fa8a7d47ec2397.json  query-29a1110ccab367f5cd6adec30c31c91d1888aab21b0527cd123b78485d6c51a3.json  query-2c851744f89df39ce7d9ede71a84e8a9fd62bbb48285b4ca7058cfa67f4cbbbb.json  query-2c8c61bb8e9b894953b9b9bd94354728b370dcdabf29174452f828d50472caf9.json  query-2d8f57f3184df62b76a273511d4cb108e3a1595775b49ee785821dec7ea07de3.json  query-2fcce4fedb98d253ac51d22fcfb89648858e5018342395079e208bf7b049ed6b.json  query-2fdcda65c01c0e3ae4cea6648b33c632a17af75376341b1eff99b9b85a3215c5.json  (+141 more)
src-tauri/benches/: auth_bench.rs  search_bench.rs
src-tauri/capabilities/: default.json
src-tauri/config/: brisas.default.toml
src-tauri/data/: bisas.db  brisas.db
src-tauri/icons/: icon.icns
src-tauri/migrations/: 10_add_ingreso_multi_tipo.sql  10_add_user_names_cedula.sql  10_create_visitantes_citas.sql  11_add_must_change_password.sql  11_create_ingresos_visitas.sql  11_create_visitantes_citas.sql  12_create_ingresos_proveedores.sql  13_create_ingresos_proveedores.sql  13_create_proveedores_catalog.sql  14_create_praind_historial.sql  15_create_historial_estado_contratista.sql  16_create_historial_bloqueos.sql  17_create_reportes_seguridad.sql  18_create_historial_estado_gafetes.sql  19_create_reportes_devolucion_incorrecta.sql  1_create_users.sql  20_add_avatar_to_users.sql  20_add_ingreso_visita_to_alertas.sql  20_add_visitantes_support.sql  2_create_contratista.sql  3_create_lista_negra.sql  4_create_vehiculo.sql  5_create_gafete.sql  6_create_alertas_gafetes.sql  6_create_gafete_perdido.sql  7_add_status_to_gafetes.sql  7_create_ingreso.sql  8_black_list_test.sql  8_create_user_preferences.sql  9_add_user_fields.sql  9_create_reportes.sql  9_insert_system_user.sql
src-tauri/src/: keyring_manager.rs  lib.rs  macros.rs  main.rs
src-tauri/target_check_3/: .rustc_info.json
src-tauri/target_temp_check/: .rustc_info.json
src-tauri/tests/: contratista_tests.rs  (+1 more)
(+923 files in other folders)
