[package]
name = "mega-brisas"
version = "1.0.0-alpha"
description = "Mega Brisas - Sistema ERP de Control de Acceso"
authors = ["Daniel Quintana"]
edition = "2021"

[lib]
name = "brisas_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ==========================================
# CORE DEPENDENCIES
# ==========================================
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ==========================================
# DATABASE
# ==========================================
# SurrealDB - Multi-model database (embedded, pure Rust)
# Using surrealkv (pure Rust) instead of rocksdb (requires C++ compilation)
surrealdb = { version = "2.0", features = [
    "kv-surrealkv",
], default-features = false }

# ==========================================
# ASYNC RUNTIME
# ==========================================
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# ==========================================
# UTILITIES
# ==========================================
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
argon2 = { version = "0.5", features = ["std"] }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"

# ==========================================
# CONFIGURATION SYSTEM
# ==========================================
toml = "0.8"
dirs = "5.0"
mac_address = "1.1"
shellexpand = "3.1"

# ==========================================
# SECURE CREDENTIAL STORAGE (OS Keyring)
# ==========================================
# secret-service no se usa actualmente, pero se mantiene por si acaso
secret-service = { version = "4.0", features = [
    "rt-tokio-crypto-rust",
], optional = true }

# ==========================================
# EXCEL IMPORT (existente)
# ==========================================
calamine = "0.26"
unicode-normalization = "0.1"


# ==========================================
# SEARCH
# ==========================================
tantivy = "0.22"


# ==========================================
# UTILS
# ==========================================
base64 = "0.21"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }
# PDF generation - typst 0.14
typst = { version = "0.14", optional = true }
typst-pdf = { version = "0.14", optional = true }
ttf-parser = { version = "0.24", optional = true }

# Excel export
rust_xlsxwriter = { version = "0.69", optional = true }
once_cell = "1.19"
regex = "1"
thiserror = "2"
serde_with = "3.11.0"
rand = "0.8.5"
tauri-plugin-updater = "2"
sysinfo = "0.30"
tauri-plugin-log = "2"
log = "0.4"

# ==========================================
# KEYRING - Platform-specific versions
# ==========================================
# Linux Secret Service API
[target.'cfg(target_os = "linux")'.dependencies]
keyring = "3"

# macOS Keychain API
[target.'cfg(target_os = "macos")'.dependencies]
keyring = "3"

# Windows Credential Manager API
[target.'cfg(target_os = "windows")'.dependencies]
keyring = "2"
winapi = { version = "0.3", features = ["wincred", "winerror"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
] }
mimalloc = { version = "0.1", default-features = false }

[dependencies.chacha20poly1305]
version = "0.10"
features = ["std"]


[dependencies.hex]
version = "0.4"


# CSV export - sin dependencias (usa std)

[features]
# Por default, todas las funciones de export están habilitadas
default = ["export"]

# Feature flag principal para export
export = ["export-pdf", "export-excel"]

# Features individuales por formato
export-pdf = ["typst", "typst-pdf", "ttf-parser"]
export-excel = ["rust_xlsxwriter"]

# Database backend
# SurrealDB is now the default and only backend

# ==========================================
# DEV DEPENDENCIES (Benchmarks, Testing)
# ==========================================
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "auth_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

# ==========================================
# BUILD PROFILES (OPTIMIZATIONS)
# ==========================================
[profile.release]
opt-level = "z"   # Optimizar para tamaño (Size)
lto = true        # Link Time Optimization
codegen-units = 1 # Código más compacto (compilación más lenta)
panic = "abort"   # Ahorra espacio quitando unwind symbols
strip = true      # Quita símbolos de debug

# ==========================================
# CLIPPY LINTS (Code Quality)
# ==========================================
[lints.clippy]
# Groups with lower priority so individual overrides work
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Individual overrides (higher priority)
module_name_repetitions = "allow"
too_many_arguments = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
unsafe_code = "warn"
