[package]
name = "mega-brisas"
version = "1.0.0"        
description = "Mega Brisas - Sistema ERP de Control de Acceso"
authors = ["Daniel Quintana"]
edition = "2021"

[lib]
name = "brisas_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# Tauri build system - Última versión estable compatible
tauri-build = { version = "2", features = [] }

[dependencies]
# =============================================================================
# NÚCLEO TAURI (UI & Framework) - Versiones actualizadas a las últimas estables
# =============================================================================
tauri = { version = "2.9", features = ["test", "tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2.5"                    # Apertura de archivos/URLs nativos
tauri-plugin-dialog = "2.4"                    # Diálogos de sistema (archivos, alertas)
tauri-plugin-store = "2.4"                     # Almacenamiento persistente simple
tauri-plugin-single-instance = "2.3"           # Evita múltiples instancias de la app
tauri-plugin-updater = "2.9"                   # Sistema de actualizaciones automáticas
tauri-plugin-log = "2.7"                       # Registro de logs para Tauri

# =============================================================================
# BASE DE DATOS (SurrealDB)
# =============================================================================
# Usamos surrealkv (puro Rust) para máxima portabilidad (evita RocksDB/C++)
surrealdb = { version = "2.0", features = [
    "kv-surrealkv",
], default-features = false }

# =============================================================================
# MOTOR DE BÚSQUEDA (Tantivy)
# =============================================================================
tantivy = "0.22" # Indexación y búsqueda de texto completo rápida

# =============================================================================
# ASÍNCRONO (Tokio Runtime)
# =============================================================================
# Solo features que realmente usamos (time viene con SurrealDB)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
async-trait = "0.1"                            # Soporte para traits asíncronos

# =============================================================================
# SERIALIZACIÓN (JSON & Datos)
# =============================================================================
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# =============================================================================
# SEGURIDAD Y CRIPTOGRAFÍA
# =============================================================================
argon2 = { version = "0.5", features = ["std"] } # Hashing de contraseñas
chacha20poly1305 = { version = "0.10", features = [
    "std",
] } # Cifrado autenticado symétrico
hex = "0.4" # Conversión binario a hex

# =============================================================================
# FECHAS Y HORAS
# =============================================================================
chrono = { version = "0.4", features = [
    "serde",
] } # Manejo de tiempo compatible con serde

# =============================================================================
# UTILIDADES GENERALES
# =============================================================================
uuid = { version = "1.0", features = ["v4", "v7"] } # v7 tiempo-ordenable, v4 fallback
rand = "0.8.5"                                # Generación de números aleatorios
once_cell = "1.19"                            # Inicialización perezosa de variables globales
base64 = "0.21"                               # Codificación de datos binarios
thiserror = "2"                               # Macros para definición de errores personalizados
log = "0.4"                                   # Facade de logging estándar de Rust

# =============================================================================
# FUTURAS IMPLEMENTACIONES (Comentadas)
# =============================================================================
# TODO: Habilitar para módulo de chat - Filtro de malas palabras/profanidad
# rustrern = "0.1"                            # Filtro de profanidad multi-idioma
# O alternativa más popular:
# censor = "0.3"                              # Detección y censura de palabras ofensivas

# =============================================================================
# CONFIGURACIÓN Y SISTEMA
# =============================================================================
toml = "0.8"        # Lectura de archivos de configuración TOML
dirs = "5.0"        # Obtención de carpetas estándar del sistema (AppData, etc)
mac_address = "1.1" # Obtención de la MAC del equipo (identificación)
shellexpand = "3.1" # Expansión de variables de entorno en rutas

# =============================================================================
# MULTIMEDIA Y PROCESAMIENTO
# =============================================================================
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }

# =============================================================================
# EXPORTACIÓN Y GENERACIÓN DE DOCUMENTOS (Opcionales por Features)
# =============================================================================
# PDF Generation (Typst engine)
typst = { version = "0.14", optional = true }
typst-pdf = { version = "0.14", optional = true }
ttf-parser = { version = "0.24", optional = true }

# Excel Export
rust_xlsxwriter = { version = "0.69", optional = true }

keyring = { version = "3", features = ["windows-native"] }           # Gestión de credenciales multiplataforma (Unified v3)

# =============================================================================
# DEPENDENCIAS ESPECÍFICAS DE PLATAFORMA (Windows Only)
# =============================================================================

# -- WINDOWS


[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
] }
mimalloc = { version = "0.1", default-features = false } # Asignador de memoria de alto rendimiento

[features]
# Por default, todas las funciones de export están habilitadas
default = ["export"]

# Feature flag principal para export
export = ["export-pdf", "export-excel"]

# Features individuales por formato
export-pdf = ["typst", "typst-pdf", "ttf-parser"]
export-excel = ["rust_xlsxwriter"]

# =============================================================================
# PERFILES DE CONSTRUCCIÓN (Optimizaciones)
# =============================================================================
[profile.release]
opt-level = 3       # Priorizar velocidad máxima de ejecución
lto = true          # Link Time Optimization para reducir binario y ganar velocidad
codegen-units = 1   # Generación unitaria para máxima optimización
panic = "abort"     # Elimina el stack unwinding para ahorrar espacio
strip = true        # Elimina símbolos de depuración del binario final

# =============================================================================
# LINTS (Calidad de Código)
# =============================================================================
[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Excepciones personalizadas - Estilo de código flexible
module_name_repetitions = "allow"    # Permitir nombres como ContratistService::get_contratista
too_many_arguments = "allow"         # Funciones complejas requieren muchos parámetros
must_use_candidate = "allow"         # No forzar #[must_use] en todas las funciones
missing_errors_doc = "allow"         # Documentación de errores opcional
missing_panics_doc = "allow"         # Documentación de panics opcional

# Excepciones de estilo - Preferencia del equipo
option_if_let_else = "allow"         # Permitir if let Some(x) = y { ... } else { ... }
significant_drop_tightening = "allow" # No forzar drop() explícito
or_fun_call = "allow"                # Permitir .ok_or(Error::new()) sin closure
items_after_statements = "allow"     # Permitir struct inline en funciones
unreadable_literal = "allow"         # Permitir 0xD9D9D9 sin separadores
too_many_lines = "allow"             # Funciones largas permitidas donde sea necesario
needless_pass_by_value = "allow"     # Tauri State requiere pass by value
cast_possible_truncation = "allow"   # Casts intencionales de usize a u32
cast_possible_wrap = "allow"         # Casts de signed a unsigned permitidos
cast_precision_loss = "allow"        # Casts de float permitidos

# Excepciones adicionales - Warnings de bajo impacto
struct_excessive_bools = "allow"     # Structs con múltiples booleanos OK
struct_field_names = "allow"         # Nombres de campos flexibles
unnecessary_wraps = "allow"          # Result<T> para consistencia de API
manual_let_else = "allow"            # Permitir if let sin let-else
collapsible_match = "allow"          # Matches anidados para claridad
field_reassign_with_default = "allow" # Inicialización incremental
format_push_string = "allow"         # push_str(format!()) permitido
future_not_send = "allow"            # Futures async no requieren Send
implicit_hasher = "allow"            # HashMap sin especificar hasher
useless_let_if_seq = "allow"         # Let seguido de if para claridad
crate_in_macro_def = "allow"         # crate:: en macros OK
unnecessary_unwrap = "allow"         # unwrap después de is_some permitido
redundant_pattern_matching = "allow" # Patterns redundantes para claridad
if_same_then_else = "allow"          # Branches iguales intencionales
assigning_clones = "allow"           # Clone en asignación permitido
ptr_arg = "allow"                    # &String, &Vec permitidos
unused_async = "allow"               # Async para consistencia de API
type_complexity = "allow"            # Tipos complejos cuando necesarios

[lints.rust]
unsafe_code = "warn"
